<resources>
    <string name="app_name">My Cooking App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_more">Show more</string>
    <string name="popular_food">Random Recipe</string>
    <string name="soup">Soup</string>
    <string name="breakfast">Breakfast</string>
    <string name="main_course">Main Course</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="dessert">Dessert</string>
    <string name="drink">Drink</string>
    <string name="ready_in_minutes">Ready in minutes:</string>
    <string name="ingredient">Ingredient</string>
    <string name="recipe">Recipe</string>
    <string name="healthy_score">Healthy Score</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="delete">Delete</string>
    <string name="diets">Diet</string>
    <string name="country">Country</string>
    <string name="intolerances">Intolerances</string>
    <string name="mealType">Meal Type</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
</resources>